@@ -161,7 +161,7 @@ $messages = array(
 'protect'           => 'Protectom',
 'protect_change'    => 'Proteccion quiix',
 'protectthispage'   => 'Protectom jan páhina',
-'unprotect'         => 'unprotectom',
+'unprotect'         => 'Unprotectom',
 'unprotectthispage' => 'Unprotectom jan páhina',
 'newpage'           => 'Páhina quiih',
 'talkpage'          => 'Czaxö jan páhina',
