@@ -105,7 +105,7 @@ $messages = array(
 'deletethispage'   => 'Burahin itong pahina',
 'protect'          => 'Ipagsanggalang',
 'protectthispage'  => 'Ipagsanggalang itong pahina',
-'unprotect'        => 'huwag ipagsanggalang',
+'unprotect'        => 'Huwag ipagsanggalang',
 'newpage'          => 'Bagong pahina',
 'talkpage'         => 'Pag-usapan itong pahina',
 'talkpagelinktext' => 'Usapan',
