@@ -121,7 +121,7 @@ $messages = array(
 'deletethispage'    => 'Scanceła paxèna',
 'protect'           => 'Proteggi',
 'protectthispage'   => 'Protegi sta paxèna',
-'unprotect'         => 'sbloca',
+'unprotect'         => 'Sbloca',
 'unprotectthispage' => 'Cava protezsion',
 'newpage'           => 'Nova paxèna',
 'talkpage'          => 'Discussion',
